--- a/src/ch/sa/address/view/PasswordView.fxml
+++ b/src/ch/sa/address/view/PasswordView.fxml
@@ -61,7 +61,7 @@
                                           <Label prefHeight="25.0" prefWidth="227.0" text="Username or E-Mail" GridPane.rowIndex="1" />
                                           <TextField editable="false" GridPane.columnIndex="1" />
                                           <TextField editable="false" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                                          <Hyperlink prefHeight="26.0" prefWidth="240.0" text="Link" GridPane.columnIndex="1" />
+                                          <Hyperlink prefHeight="33.0" prefWidth="260.0" text="Link" GridPane.columnIndex="1" />
                                        </children>
                                     </GridPane>
                                     <ButtonBar layoutX="623.0" layoutY="564.0" prefHeight="51.0" prefWidth="200.0">
@@ -70,7 +70,7 @@
                                           <Button mnemonicParsing="false" text="Delete" />
                                       </buttons>
                                     </ButtonBar>
-                                    <Button layoutX="14.0" layoutY="564.0" mnemonicParsing="false" text="New Login" />
+                                    <Button fx:id="newLoginButton" layoutX="14.0" layoutY="564.0" mnemonicParsing="false" text="New Login" />
                                     <Label layoutX="95.0" layoutY="45.0" text="AppTitle" AnchorPane.leftAnchor="95.0" AnchorPane.topAnchor="45.0" />
                                  </children>
                               </AnchorPane>
