--- a/src/ch/sa/address/view/PasswordView.fxml
+++ b/src/ch/sa/address/view/PasswordView.fxml
@@ -66,7 +66,7 @@
                                     </GridPane>
                                     <ButtonBar layoutX="623.0" layoutY="564.0" prefHeight="51.0" prefWidth="200.0">
                                       <buttons>
-                                        <Button mnemonicParsing="false" text="Edit" />
+                                        <Button fx:id="editButton" mnemonicParsing="false" text="Edit" />
                                           <Button mnemonicParsing="false" text="Delete" />
                                       </buttons>
                                     </ButtonBar>
