--- a/src/ch/sa/address/view/PasswordView.fxml
+++ b/src/ch/sa/address/view/PasswordView.fxml
@@ -17,7 +17,7 @@
 
 <AnchorPane prefHeight="700.0" prefWidth="1200.0" stylesheets="@DarkTheme.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.sa.address.view.PasswordViewController">
    <children>
-      <TabPane prefHeight="700.0" prefWidth="1200.0" side="BOTTOM" stylesheets="@TabPane.css" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <TabPane prefHeight="700.0" prefWidth="1200.0" stylesheets="@TabPane.css" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <tabs>
           <Tab closable="false" text="Passwords">
             <content>
