Added a few Items from Password view to PasswordViewController

--- a/src/ch/sa/address/view/PasswordView.fxml
+++ b/src/ch/sa/address/view/PasswordView.fxml
@@ -48,7 +48,7 @@
                                         <RowConstraints maxHeight="42.0" minHeight="10.0" prefHeight="42.0" vgrow="SOMETIMES" />
                                       </rowConstraints>
                                        <children>
-                                          <TextField fx:id="passwordField" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                          <TextField fx:id="passwordTextField" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                                           <ButtonBar prefHeight="150.0" prefWidth="302.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
                                             <buttons>
                                               <Button fx:id="CopyButton" mnemonicParsing="false" text="Copy" />
@@ -60,14 +60,14 @@
                                           <Label text="Webside" />
                                           <Label prefHeight="25.0" prefWidth="227.0" text="Username or E-Mail" GridPane.rowIndex="1" />
                                           <TextField editable="false" GridPane.columnIndex="1" />
-                                          <TextField editable="false" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                                          <Hyperlink prefHeight="33.0" prefWidth="260.0" text="Link" GridPane.columnIndex="1" />
+                                          <TextField fx:id="usernameTextField" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                          <Hyperlink fx:id="websideLink" prefHeight="33.0" prefWidth="260.0" text="Link" GridPane.columnIndex="1" />
                                        </children>
                                     </GridPane>
                                     <ButtonBar layoutX="623.0" layoutY="564.0" prefHeight="51.0" prefWidth="200.0">
                                       <buttons>
                                         <Button fx:id="editButton" mnemonicParsing="false" text="Edit" />
-                                          <Button mnemonicParsing="false" text="Delete" />
+                                          <Button fx:id="deleteButton" mnemonicParsing="false" text="Delete" />
                                       </buttons>
                                     </ButtonBar>
                                     <Button fx:id="newLoginButton" layoutX="14.0" layoutY="564.0" mnemonicParsing="false" text="New Login" />
