--- a/src/ch/sa/address/view/PasswordView.fxml
+++ b/src/ch/sa/address/view/PasswordView.fxml
@@ -61,7 +61,7 @@
                                           <Label prefHeight="25.0" prefWidth="227.0" text="Username or E-Mail" GridPane.rowIndex="1" />
                                           <TextField editable="false" GridPane.columnIndex="1" />
                                           <TextField fx:id="usernameTextField" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                                          <Hyperlink fx:id="websideLink" prefHeight="33.0" prefWidth="260.0" text="Link" GridPane.columnIndex="1" />
+                                          <Hyperlink fx:id="websideLink" onAction="#openWebside" prefHeight="33.0" prefWidth="260.0" text="Link" GridPane.columnIndex="1" />
                                        </children>
                                     </GridPane>
                                     <ButtonBar layoutX="623.0" layoutY="564.0" prefHeight="51.0" prefWidth="200.0">
