--- a/src/ch/sa/address/view/PasswordView.fxml
+++ b/src/ch/sa/address/view/PasswordView.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane prefHeight="700.0" prefWidth="1200.0" stylesheets="@DarkTheme.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.sa.address.view.PasswordViewController">
+<AnchorPane prefHeight="700.0" prefWidth="1200.0" stylesheets="@DarkTheme.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.sa.address.view.PasswordViewController">
    <children>
       <TabPane prefHeight="700.0" prefWidth="1200.0" side="BOTTOM" stylesheets="@TabPane.css" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <tabs>
@@ -66,7 +66,7 @@
                                     </GridPane>
                                     <ButtonBar layoutX="623.0" layoutY="564.0" prefHeight="51.0" prefWidth="200.0">
                                       <buttons>
-                                        <Button mnemonicParsing="false" text="Edit" />
+                                        <Button fx:id="editButton" mnemonicParsing="false" text="Edit" />
                                           <Button mnemonicParsing="false" text="Delete" />
                                       </buttons>
                                     </ButtonBar>
