--- a/src/ch/sa/address/view/PasswordView.fxml
+++ b/src/ch/sa/address/view/PasswordView.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane prefHeight="700.0" prefWidth="1200.0" stylesheets="@DarkTheme.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.sa.address.view.PasswordViewController">
+<AnchorPane prefHeight="700.0" prefWidth="1200.0" stylesheets="@DarkTheme.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.sa.address.view.PasswordViewController">
    <children>
       <TabPane prefHeight="700.0" prefWidth="1200.0" stylesheets="@TabPane.css" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <tabs>
@@ -51,7 +51,7 @@
                                           <TextField fx:id="passwordTextField" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                                           <ButtonBar prefHeight="150.0" prefWidth="302.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
                                             <buttons>
-                                              <Button fx:id="CopyButton" mnemonicParsing="false" text="Copy" />
+                                              <Button fx:id="CopyButton" mnemonicParsing="false" onAction="#handleCopyButton" text="Copy" />
                                                 <Button fx:id="RevealButton" mnemonicParsing="false" onAction="#handleRevealPassword" text="Reveal" />
                                                 <Button fx:id="EnlargeButton" mnemonicParsing="false" text="Enlarge" />
                                             </buttons>
