--- a/src/ch/sa/address/view/DarkTheme.css
+++ b/src/ch/sa/address/view/DarkTheme.css
@@ -3,6 +3,7 @@
  * Publisher: Apress
  * Author   : Gerrit Grunwald
  *
+ * https://www.youtube.com/watch?v=MyByMfzNRNA
  */
 .root {
   -dark                        : #48434A;
