--- a/src/ch/sa/address/view/PasswordView.fxml
+++ b/src/ch/sa/address/view/PasswordView.fxml
@@ -21,7 +21,7 @@
         <tabs>
           <Tab closable="false" text="Passwords">
             <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" stylesheets="@DarkTheme.css">
                      <children>
                         <SplitPane dividerPositions="0.29797979797979796" layoutX="355.0" layoutY="186.0" prefHeight="640.0" prefWidth="1200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                           <items>
@@ -70,7 +70,7 @@
                                           <Button fx:id="deleteButton" mnemonicParsing="false" text="Delete" />
                                       </buttons>
                                     </ButtonBar>
-                                    <Button fx:id="newLoginButton" layoutX="14.0" layoutY="574.0" mnemonicParsing="false" text="New Login" />
+                                    <Button fx:id="newLoginButton" layoutX="14.0" layoutY="566.0" mnemonicParsing="false" text="New Login" />
                                     <Label layoutX="95.0" layoutY="45.0" text="AppTitle" AnchorPane.leftAnchor="95.0" AnchorPane.topAnchor="45.0" />
                                  </children>
                               </AnchorPane>
@@ -82,12 +82,12 @@
           </Tab>
           <Tab closable="false" text="Contacts">
             <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" stylesheets="@DarkTheme.css" />
             </content>
           </Tab>
             <Tab text="Settings">
               <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" stylesheets="@DarkTheme.css" />
               </content>
             </Tab>
         </tabs>
