--- a/src/ch/sa/address/view/PasswordView.fxml
+++ b/src/ch/sa/address/view/PasswordView.fxml
@@ -37,7 +37,7 @@
                             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                                  <children>
                                     <GridPane layoutX="27.0" layoutY="277.0" prefHeight="134.0" prefWidth="767.0">
-                                      <columnConstraints>
+                                      <columnConstr"src/ch/sa/address/view/DarkTheme.css"aints>
                                           <ColumnConstraints hgrow="SOMETIMES" maxWidth="271.0" minWidth="10.0" prefWidth="167.0" />
                                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="271.0" minWidth="10.0" prefWidth="222.0" />
                                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="302.0" minWidth="10.0" prefWidth="290.0" />
