--- a/src/ch/sa/address/view/PasswordViewEdit.fxml
+++ b/src/ch/sa/address/view/PasswordViewEdit.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
-<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.Tab?>
@@ -15,7 +14,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane prefHeight="700.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.sa.address.view.PasswordViewController">
+<AnchorPane prefHeight="700.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.sa.address.view.PasswordViewEditController">
    <children>
       <TabPane prefHeight="700.0" prefWidth="1200.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <tabs>
@@ -32,7 +31,7 @@
                                         <TableColumn fx:id="loginColumn" editable="false" prefWidth="351.0" text="Logins" />
                                       </columns>
                                     </TableView>
-                                    <Button fx:id="newLoginButton" layoutX="1.0" layoutY="567.0" mnemonicParsing="false" onAction="#handleNew" prefHeight="47.0" prefWidth="352.0" text="New Login" />
+                                    <Button layoutX="1.0" layoutY="567.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="352.0" text="New Login" />
                                  </children>
                               </AnchorPane>
                             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
@@ -49,29 +48,26 @@
                                         <RowConstraints maxHeight="42.0" minHeight="10.0" prefHeight="42.0" vgrow="SOMETIMES" />
                                       </rowConstraints>
                                        <children>
-                                          <TextField fx:id="passwordTextField" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                                          <ButtonBar prefHeight="150.0" prefWidth="302.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
-                                            <buttons>
-                                              <Button fx:id="CopyButton" mnemonicParsing="false" onAction="#handleCopyButton" text="Copy" />
-                                                <Button fx:id="RevealButton" mnemonicParsing="false" onAction="#handleRevealPassword" text="Reveal" />
-                                                <Button fx:id="EnlargeButton" mnemonicParsing="false" text="Enlarge" />
-                                            </buttons>
-                                          </ButtonBar>
+                                          <TextField fx:id="password" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                                           <Label text="Password" GridPane.rowIndex="2" />
                                           <Label text="Webside" />
                                           <Label prefHeight="25.0" prefWidth="227.0" text="Username or E-Mail" GridPane.rowIndex="1" />
-                                          <TextField editable="false" GridPane.columnIndex="1" />
-                                          <TextField fx:id="usernameTextField" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                                          <Hyperlink fx:id="websideLink" onAction="#openWebside" prefHeight="33.0" prefWidth="260.0" text="Link" GridPane.columnIndex="1" />
+                                          <TextField fx:id="webside" GridPane.columnIndex="1" />
+                                          <TextField fx:id="username" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                          <ButtonBar prefHeight="40.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
+                                            <buttons>
+                                              <Button mnemonicParsing="false" text="Generate" />
+                                            </buttons>
+                                          </ButtonBar>
                                        </children>
                                     </GridPane>
                                     <ButtonBar layoutX="623.0" layoutY="564.0" prefHeight="51.0" prefWidth="200.0">
                                       <buttons>
-                                        <Button fx:id="editButton" mnemonicParsing="false" text="Edit" />
-                                          <Button fx:id="deleteButton" mnemonicParsing="false" onAction="#handleDeleteButton" text="Delete" />
+                                        <Button mnemonicParsing="false" onAction="#onSaveButton" text="Save" />
+                                          <Button mnemonicParsing="false" text="Delete" />
                                       </buttons>
                                     </ButtonBar>
-                                    <Label layoutX="95.0" layoutY="45.0" text="AppTitle" AnchorPane.leftAnchor="95.0" AnchorPane.topAnchor="45.0" />
+                                    <TextField fx:id="name" layoutX="95.0" layoutY="45.0" AnchorPane.leftAnchor="95.0" AnchorPane.topAnchor="45.0" />
                                  </children>
                               </AnchorPane>
                           </items>
